--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     </div>
     <div class="center">
         <div class="homepage">
-            <div class="item"><img class="pic1" src="/assets/1.webp" /></div>
+            <div class="item"><img class="pic1" src="/assets/f1.jpeg" /></div>
             <div class="item"><p class="p1">Welcome to our Formula 1 Fan Guide, your ultimate companion into the exhilarating world of Formula 1 racing! Whether you're a newcomer eager to dive into the excitement or a seasoned enthusiast looking to further your knowledge, our site is here to provide you with a comprehensive resource that will fuel your passion for the sport. From the heart-pounding action on the racetrack to the intricate strategies behind the scenes, we aim to be your go-to destination for all things Formula 1. Explore our pages filled with captivating insights, team and driver profiles, race results, and the latest news updates. Join our vibrant fan community, where you can engage with fellow fans, share your thoughts, and immerse yourself in the electrifying atmosphere that defines Formula 1. Get ready to ignite your love for speed, precision, and the pursuit of victory in the extraordinary world of Formula 1.</p></div>
             <div class="item"><p class="p2">Formula 1, the pinnacle of motorsport, encapsulates the perfect blend of cutting-edge technology, unrivaled skill, and heart-stopping competition. For over seven decades, Formula 1 has enthralled audiences worldwide, showcasing the best drivers, teams, and engineering prowess. From legendary rivalries to breathtaking overtakes, every race is an adrenaline-fueled spectacle, where split-second decisions can determine the outcome. The sport combines raw power with meticulous precision, as teams push the boundaries of innovation to gain a competitive edge. As you embark on this thrilling journey with us, we invite you to explore the history, rules, iconic circuits, and the captivating stories that have shaped the legacy of Formula 1. Join us as we delve into a world where speed, passion, and the pursuit of greatness collide, creating an unparalleled spectacle that leaves fans exhilarated and forever hooked.</p></div>
-            <div class="item"><img class="pic2" src="/assets/2.avif" /></div>
+            <div class="item"><img class="pic2" src="/assets/f1_2.jpeg" /></div>
         </div>
     </div>
     <footer>© 2023 github.com/mitkogeorgiev17</footer>
