--- a/public/circuits.html
+++ b/public/circuits.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css"/>
+    <link rel="stylesheet" href="../style.css"/>
     <title>Circuits</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,15 +13,15 @@
 <body>
     <div class="menu">
         <div class="leftmenu">
-            <a href="./index.html"><img class="logo" src="./assets/logo.png" />
+            <a href="../index.html"><img class="logo" src="../assets/logo.png" />
             <h1>Guide</h1></a>
         </div>
         <div class="rightmenu">
-            <a href="./public/about.html"><h2>ABOUT</h2></a>
-            <a href="./public/rules.html"><h2>RULES & REGULATIONS</h2></a>
-            <a href="./public/teamsdrivers.html"><h2>TEAMS & DRIVERS</h2></a>
-            <a href="./public/circuits.html"><h2>CIRCUITS</h2></a>
-            <a href="./public/calendar.html"><h2>CALENDAR</h2></a>
+            <a href="../public/about.html"><h2>ABOUT</h2></a>
+            <a href="../public/rules.html"><h2>RULES & REGULATIONS</h2></a>
+            <a href="../public/teamsdrivers.html"><h2>TEAMS & DRIVERS</h2></a>
+            <a href="../public/circuits.html"><h2>CIRCUITS</h2></a>
+            <a href="../public/calendar.html"><h2>CALENDAR</h2></a>
         </div>
     </div>
 
