--- a/index.html
+++ b/index.html
@@ -32,7 +32,13 @@
             <div class="item"><img class="pic2" src="assets/f1_2.jpeg" /></div>
         </div>
     </div>
-    <footer>© 2023 github.com/mitkogeorgiev17</footer>
-    <div class="redline"></div>
+    <!-- <footer id="footer">
+        © 2023 github.com/mitkogeorgiev17
+        <div class="redline"></div>
+    </footer> -->
+
+    <div id="footer">
+        © 2023 github.com/mitkogeorgiev17
+    </div>
 </body>
 </html>
