--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="center">
         <div class="homepage">
             <div class="item"><img class="pic1" src="assets/f1.jpeg" /></div>
-            <div class="item"><p class="p1">Welcome to our Formula 1 Fan Guide, your ultimate resource for all things Formula 1 racing. Explore captivating insights, team profiles, race results, and the latest news updates, while engaging with a vibrant fan community. Ignite your love for speed, precision, and the pursuit of victory in the extraordinary world of Formula 1.</p></div>
+            <div class="item pinthis"><p class="p1">Welcome to our Formula 1 Fan Guide, your ultimate resource for all things Formula 1 racing. Explore captivating insights, team profiles, race results, and the latest news updates, while engaging with a vibrant fan community. Ignite your love for speed, precision, and the pursuit of victory in the extraordinary world of Formula 1.</p></div>
             <div class="item"><p class="p2">Formula 1, the pinnacle of motorsport, combines cutting-edge technology, unrivaled skill, and heart-stopping competition. Every race is an adrenaline-fueled spectacle, where split-second decisions can determine the outcome. Join us as we explore the history, rules, iconic circuits, and captivating stories that have shaped the legacy of Formula 1, where speed, passion, and greatness collide.</p></div>
             <div class="item"><img class="pic2" src="assets/f1_2.jpeg" /></div>
         </div>
