--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css"/>
     <title>F1 Guide</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,34 +15,30 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="menu">
-        <div class="leftmenu">
-            <a href="./index.html"><img class="logo" src="assets/logo.png" />
-            <h1>Guide</h1></a>
-        </div>
-        <div class="rightmenu">
-            <a href="./public/about.html"><h2>ABOUT</h2></a>
-            <a href="./public/rules.html"><h2>RULES & REGULATIONS</h2></a>
-            <a href="./public/teamsdrivers.html"><h2>TEAMS & DRIVERS</h2></a>
-            <a href="./public/circuits.html"><h2>CIRCUITS</h2></a>
-            <a href="./public/calendar.html"><h2>CALENDAR</h2></a>
-        </div>
-    </div>
-    <div class="center">
-        <div class="homepage">
-            <div class="item"><img class="pic1" src="assets/f1.jpeg" /></div>
-            <div class="item pinthis"><p class="p1">Welcome to our Formula 1 Fan Guide, your ultimate resource for all things Formula 1 racing. Explore captivating insights, team profiles, race results, and the latest news updates, while engaging with a vibrant fan community. Ignite your love for speed, precision, and the pursuit of victory in the extraordinary world of Formula 1.</p></div>
-            <div class="item"><p class="p2">Formula 1, the pinnacle of motorsport, combines cutting-edge technology, unrivaled skill, and heart-stopping competition. Every race is an adrenaline-fueled spectacle, where split-second decisions can determine the outcome. Join us as we explore the history, rules, iconic circuits, and captivating stories that have shaped the legacy of Formula 1, where speed, passion, and greatness collide.</p></div>
-            <div class="item"><img class="pic2" src="assets/f1_2.jpeg" /></div>
-        </div>
-    </div>
-    <!-- <footer id="footer">
-        © 2023 github.com/mitkogeorgiev17
-        <div class="redline"></div>
-    </footer> -->
+    <section class="header-container">
+    <div class="container fixed">
+        <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-4 mb-4 border-bottom">
+          <div class="col-md-3 mb-2 mb-md-0">
+            <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
+                <a href="#" class="nav-link px-2 link-secondary justify-content-center align-items-center"><img class="pb-4" src="./assets/logo.png" width="100px"/> <h1 class="text-white display-6 d-inline-block">GUIDE</h1> </a>
+            </a>
+          </div>
+    
+          <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0 mx-5 pt-2">
+            <li><a href="./public/about.html" class="text-white nav-link px-3">ABOUT</a></li>
+            <li><a href="./public/teamsdrivers.html" class="text-white nav-link px-3">TEAMS & DRIVERS</a></li>
+            <li><a href="./public/calendar.html" class="text-white nav-link px-3">CALENDAR</a></li>
+            <li><a href="./public/circuits.html" class="text-white nav-link px-3">CIRCUITS</a></li>
+            <li><a href="./public/rules.html" class="text-white nav-link px-3">RULES</a></li>
+          </ul>
+        </header>
+      </div>
+    </section>
 
-    <div id="footer">
-        © 2023 github.com/mitkogeorgiev17
-    </div>
+    <section>
+        
+    </section>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
