--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 <body>
     <section class="header-container">
     <div class="container fixed">
-        <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-4 mb-4 border-bottom">
-          <div class="col-md-3 mb-2 mb-md-0">
+        <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4">
+          <div class="col-md-4 mb-2 mb-md-0 justify-content-center align-items-center">
             <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
-                <a href="#" class="nav-link px-2 link-secondary justify-content-center align-items-center"><img class="pb-4" src="./assets/logo.png" width="100px"/> <h1 class="text-white display-6 d-inline-block">GUIDE</h1> </a>
+                <a href="/index.html" class="nav-link px-2 link-secondary justify-content-center align-items-center"><img class="pb-4" src="./assets/logo.png" width="100px"/> <h1 class="text-white display-6 d-inline-block">GUIDE</h1> </a>
             </a>
           </div>
     
-          <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0 mx-5 pt-2">
+          <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0 mb-8 pt-0">
             <li><a href="./public/about.html" class="text-white nav-link px-3">ABOUT</a></li>
             <li><a href="./public/teamsdrivers.html" class="text-white nav-link px-3">TEAMS & DRIVERS</a></li>
             <li><a href="./public/calendar.html" class="text-white nav-link px-3">CALENDAR</a></li>
@@ -36,7 +36,7 @@
     </section>
 
     <section>
-        
+
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
