--- a/public/teamsdrivers.html
+++ b/public/teamsdrivers.html
@@ -17,10 +17,10 @@
 <body>
     <section class="header-container">
     <div class="container fixed">
-        <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-4 mb-4 border-bottom">
+        <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-4 mb-4">
           <div class="col-md-3 mb-2 mb-md-0">
             <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
-                <a href="#" class="nav-link px-2 link-secondary justify-content-center align-items-center"><img class="pb-4" src="../assets/logo.png" width="100px"/> <h1 class="text-white display-6 d-inline-block">GUIDE</h1> </a>
+                <a href="../index.html" class="nav-link px-2 link-secondary justify-content-center align-items-center"><img class="pb-4" src="../assets/logo.png" width="100px"/> <h1 class="text-white display-6 d-inline-block">GUIDE</h1> </a>
             </a>
           </div>
     
