--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
 </head>
 <body>
-    <section class="header-container">
+    <section class="paint-it-black">
     <div class="container fixed">
         <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4">
           <div class="col-md-4 mb-2 mb-md-0 justify-content-center align-items-center">
@@ -35,8 +35,54 @@
       </div>
     </section>
 
-    <section>
+    <section class="hero1">
+      <div class="container col-xxl-9 px-4 py-5">
+        <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+          <div class="col-9 col-sm-8 col-lg-7">
+            <img src="./assets/f1.jpeg" class="indeximg d-block mx-lg-auto img-fluid justify-content-center align-items-center" alt="F1 Car" loading="lazy">
+          </div>
+          <div class="col-lg-5">
+            <h2 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Welcome to the exhilarating world of Formula 1!</h2>
+            <p class="lead">Explore the ultimate guide for new fans, featuring captivating insights, team and driver profiles, regulations and much more. Ignite your passion for speed, precision, and the pursuit of victory in the extraordinary realm of Formula 1.</p>
+            <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+              <button type="button" class="btn btn-danger btn-lg px-4 me-md-2">Teams and Drivers</button>
+              <button type="button" class="btn btn-outline-secondary btn-lg px-4">Race Calendar</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
+    <section class="hero2">
+      <div class="container col-xxl-9 px-4 py-5">
+        <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+          <div class="col-lg-5">
+            <h2 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Dive into the fascinating world of Formula 1 and expand your knowledge. </h2>
+            <p class="lead">Explore in-depth profiles of teams and drivers on the grid, familiarize yourself with the rules and regulations that govern Formula 1, and stay up to date with the thrilling race calendar.</p>
+            <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+            </div>
+          </div>
+          <div class="col-9 col-sm-8 col-lg-7">
+            <img src="./assets/f1_2.jpg" class="indeximg d-block mx-lg-auto img-fluid justify-content-center align-items-center" alt="F1 Car" loading="lazy">
+          </div>
+        
+        </div>
+      </div>
+    </section>
+
+    <section class="paint-it-black">
+      <div class="container">
+        <footer class="d-flex flex-wrap justify-content-center align-items-center py-4 mb-0">
+          <div class="col-md-4 d-flex align-items-center">
+            <a href="https://github.com/mitkogeorgiev17" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-github" viewBox="0 0 16 16">
+                <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+              </svg>
+            </a>
+            <a class="text-white text-decoration-none" href="https://github.com/mitkogeorgiev17">github.com/mitkogeorgiev17<svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a>
+          </div>
+        </footer>
+      </div>
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
