--- a/public/teamsdrivers.html
+++ b/public/teamsdrivers.html
@@ -17,14 +17,14 @@
 <body>
     <section class="header-container">
     <div class="container fixed">
-        <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-4 mb-4">
-          <div class="col-md-3 mb-2 mb-md-0">
+      <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4">
+        <div class="col-md-4 mb-2 mb-md-0 justify-content-center align-items-center">
             <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
-                <a href="../index.html" class="nav-link px-2 link-secondary justify-content-center align-items-center"><img class="pb-4" src="../assets/logo.png" width="100px"/> <h1 class="text-white display-6 d-inline-block">GUIDE</h1> </a>
+              <a href="../index.html" class="nav-link px-2 link-secondary justify-content-center align-items-center"><img class="pb-4" src="../assets/logo.png" width="100px"/> <h1 class="text-white display-6 d-inline-block">GUIDE</h1> </a>
             </a>
           </div>
     
-          <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0 mx-5 pt-2">
+          <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0 mb-8 pt-0">
             <li><a href="../public/about.html" class="text-white nav-link px-3">ABOUT</a></li>
             <li><a href="../public/teamsdrivers.html" class="text-white nav-link px-3">TEAMS & DRIVERS</a></li>
             <li><a href="../public/calendar.html" class="text-white nav-link px-3">CALENDAR</a></li>
