--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     </section>
 
     <section class="hero1">
-      <div class="container col-xxl-9 px-4 py-5">
-        <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+      <div class="container col-xxl-9 px-4 pt-0">
+        <div class="row flex-lg-row-reverse align-items-center g-5 pt-0">
           <div class="col-9 col-sm-8 col-lg-7">
             <img src="./assets/f1.jpeg" class="indeximg d-block mx-lg-auto img-fluid justify-content-center align-items-center" alt="F1 Car" loading="lazy">
           </div>
@@ -45,8 +45,8 @@
             <h2 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Welcome to the exhilarating world of Formula 1!</h2>
             <p class="lead">Explore the ultimate guide for new fans, featuring captivating insights, team and driver profiles, regulations and much more. Ignite your passion for speed, precision, and the pursuit of victory in the extraordinary realm of Formula 1.</p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-              <button type="button" class="btn btn-danger btn-lg px-4 me-md-2">Teams and Drivers</button>
-              <button type="button" class="btn btn-outline-secondary btn-lg px-4">Race Calendar</button>
+              <a href="./public/teamsdrivers.html"><button type="button" class="btn btn-outline-danger btn-lg px-4 me-md-2">Teams and Drivers</button></a>
+              <a href="./public/calendar.html"><button type="button" class="btn btn-outline-danger btn-lg px-4">Race Calendar</button></a>
             </div>
           </div>
         </div>
@@ -60,6 +60,8 @@
             <h2 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Dive into the fascinating world of Formula 1 and expand your knowledge. </h2>
             <p class="lead">Explore in-depth profiles of teams and drivers on the grid, familiarize yourself with the rules and regulations that govern Formula 1, and stay up to date with the thrilling race calendar.</p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+              <a href="./public/circuits.html"><button type="button" class="btn btn-outline-danger btn-lg px-4 me-md-2">Circuits</button></a>
+              <a href="./public/rules.html"><button type="button" class="btn btn-outline-danger btn-lg px-4">Rules & Regulations</button></a>
             </div>
           </div>
           <div class="col-9 col-sm-8 col-lg-7">
