--- a/public/circuits.html
+++ b/public/circuits.html
@@ -28,7 +28,7 @@
             <li><a href="../public/about.html" class="text-white nav-link px-3">ABOUT</a></li>
             <li><a href="../public/teamsdrivers.html" class="text-white nav-link px-3">TEAMS & DRIVERS</a></li>
             <li><a href="../public/calendar.html" class="text-white nav-link px-3">CALENDAR</a></li>
-            <li><a href="../public/circuits.html" class="text-white nav-link px-3">CIRCUITS</a></li>
+            <li><a href="../public/circuits.html" class="text-white nav-link px-3 fw-bold">CIRCUITS</a></li>
             <li><a href="../public/rules.html" class="text-white nav-link px-3">RULES</a></li>
           </ul>
         </header>
