--- a/public/about.html
+++ b/public/about.html
@@ -25,7 +25,7 @@
           </div>
     
           <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0 mb-8 pt-0">
-            <li><a href="../public/about.html" class="text-white nav-link px-3">ABOUT</a></li>
+            <li><a href="../public/about.html" class="text-white nav-link px-3 fw-bold">ABOUT</a></li>
             <li><a href="../public/teamsdrivers.html" class="text-white nav-link px-3">TEAMS & DRIVERS</a></li>
             <li><a href="../public/calendar.html" class="text-white nav-link px-3">CALENDAR</a></li>
             <li><a href="../public/circuits.html" class="text-white nav-link px-3">CIRCUITS</a></li>
