--- a/public/rules.html
+++ b/public/rules.html
@@ -29,7 +29,7 @@
             <li><a href="../public/teamsdrivers.html" class="text-white nav-link px-3">TEAMS & DRIVERS</a></li>
             <li><a href="../public/calendar.html" class="text-white nav-link px-3">CALENDAR</a></li>
             <li><a href="../public/circuits.html" class="text-white nav-link px-3">CIRCUITS</a></li>
-            <li><a href="../public/rules.html" class="text-white nav-link px-3">RULES</a></li>
+            <li><a href="../public/rules.html" class="text-white nav-link px-3 fw-bold">RULES</a></li>
           </ul>
         </header>
       </div>
