--- a/public/about.html
+++ b/public/about.html
@@ -35,6 +35,52 @@
       </div>
     </section>
 
+    <section class="container">
+      <div class="px-0 pt-1 my-5 mt-0 text-center">
+        <div class="overflow-hidden" style="max-height: 45vh;">
+          <h1 class="display-4 fw-bold text-body-emphasis">All about Formula 1</h1>
+          <div class="container-lg-6">
+            <img src="../assets/pit.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="F1 car" width="700" height="500" loading="lazy">
+          </div>
+        </div>
+        <div class="col-lg-6 mx-auto border rounded my-3">
+          <p class="lead mb-4 pt-4">Formula 1, often referred to as F1, is the pinnacle of motorsport. It is a global racing series that features the most skilled drivers, cutting-edge technology, and a relentless pursuit of speed and precision. With a history spanning over seven decades, Formula 1 has become an iconic and revered sport, captivating millions of fans worldwide. It represents the ultimate fusion of engineering brilliance, strategic prowess, and high-stakes competition.</p>
+        </div>
+        <div class="col-lg-6 mx-auto border rounded my-3">
+          <p class="lead mb-4 pt-4">At its core, Formula 1 is about pushing the limits of what is possible in motorsport. The sport showcases the finest automotive engineering advancements, with teams constantly innovating and refining their cars to achieve optimal performance. From aerodynamics to hybrid power units, Formula 1 serves as a hotbed for technological progress, often leading to breakthroughs that impact the automotive industry as a whole.</p>
+        </div>
+        <div class="col-lg-6 mx-auto border rounded my-3">
+          <p class="lead mb-4 pt-4">A Formula 1 season is a thrilling journey that spans multiple races held across different countries and continents. Typically, a season consists of around 20 races, taking place on a variety of circuits, including street circuits, purpose-built tracks, and historic venues. Each race is a battle between drivers, teams, and their finely-tuned machines, as they vie for victory, points, and the ultimate goal of winning the Drivers' and Constructors' Championships.</p>
+        </div>
+      </div>
+      <div class="container col-xxl-8 px-4 mt-0">
+        <div class="row flex-lg-row-reverse align-items-center g-5 py-0">
+          <div class="col-10 col-sm-8 col-lg-6">
+            <img src="../assets/pit2.jpg" class="d-block mx-lg-auto img-fluid mb-5" alt="f1 car" loading="lazy">
+          </div>
+          <div class="col-lg-6 border rounded my-3">
+            <p class="lead mt-3">Strategy plays a crucial role in Formula 1. From tire management and pit stop decisions to race tactics and fuel consumption, teams must make calculated choices to maximize their chances of success. Races are not only about raw speed but also about astute decision-making and adaptability, making Formula 1 a chess match on wheels where split-second choices can make or break a race.</p>
+            <p class="lead">Formula 1 has a rich heritage filled with legendary drivers and iconic moments that have become part of its folklore. From the intense rivalries of the past, such as Ayrton Senna vs. Alain Prost or Lewis Hamilton vs. Sebastian Vettel, to the record-breaking achievements of drivers like Michael Schumacher and Lewis Hamilton, the sport has witnessed remarkable talents etch their names in history. It is a sport that evokes emotions, inspires generations, and unites people from all walks of life under the banner of thrilling competition and a shared love for speed and excellence.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="paint-it-black">
+      <div class="container">
+        <footer class="d-flex flex-wrap justify-content-center align-items-center py-4 mb-0">
+          <div class="col-md-6 d-flex align-items-center justify-content-center">
+            <a href="https://github.com/mitkogeorgiev17" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-github" viewBox="0 0 16 16">
+                <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+              </svg>
+            </a>
+            <a class="text-white text-decoration-none" href="https://github.com/mitkogeorgiev17">github.com/mitkogeorgiev17<svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a>
+          </div>
+        </footer>
+      </div>
+    </section>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
