--- a/public/teamsdrivers.html
+++ b/public/teamsdrivers.html
@@ -35,6 +35,272 @@
       </div>
     </section>
 
+    <section>
+      <div class="container pb-5">
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+          <a href="#" class="text-decoration-none">
+          <div class="col">
+            <div class="card shadow-sm" id="team-card">
+              <p class="card-text text-center pt-2 pb-2 fw-bold rb-card">Red Bull</p>
+              <img class="bd-placeholder-img card-img-top" src="../assets/teams/RB19.png"/>
+              <div class="d-flex justify-content-around">
+                <img class="" src="../assets/teams/VER_icon.png" width="85" />
+                <img class="" src="../assets/teams/PER_icon.png" width="85"/>
+              </div>
+                <div class="card-body text-center">
+                <div class="d-flex justify-content-around fw-bold">
+                <p class="card-text">#1 Max Verstappen</p>
+                <p class="card-text">#11 Scheco Perez</p>
+                </div>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                </div>
+                  <div class="card-body py-0" >
+                  <img src="../assets/teams/rb_icon.png" height="70"/>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </a>
+        <a href="#" class="text-decoration-none">
+          <div class="col">
+            <div class="card shadow-sm" id="team-card">
+              <p class="card-text text-center pt-2 pb-2 fw-bold amr-card">Aston Martin</p>
+              <img class="bd-placeholder-img card-img-top" src="../assets/teams/amr.png"/>
+              <div class="d-flex justify-content-around">
+                <img class="" src="../assets/teams/ALO_icon.png" width="85" />
+                <img class="" src="../assets/teams/STR_icon.png" width="85"/>
+              </div>
+                <div class="card-body text-center">
+                <div class="d-flex justify-content-around fw-bold">
+                <p class="card-text">#14 Fernando Alonso</p>
+                <p class="card-text">#18 Lance Stroll</p>
+                </div>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                </div>
+                  <div class="card-body py-0" >
+                  <img src="../assets/teams/arm_icon.png" height="70"/>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </a><a href="#" class="text-decoration-none">
+          <div class="col">
+            <div class="card shadow-sm" id="team-card">
+              <p class="card-text text-center pt-2 pb-2 fw-bold fer-card">Ferrari</p>
+              <img class="bd-placeholder-img card-img-top" src="../assets/teams/F175.png"/>
+              <div class="d-flex justify-content-around">
+                <img class="" src="../assets/teams/LEC_icon.png" width="85" />
+                <img class="" src="../assets/teams/SAI_icon.png" width="85"/>
+              </div>
+                <div class="card-body text-center">
+                <div class="d-flex justify-content-around fw-bold">
+                <p class="card-text">#16 Charles Leclerc</p>
+                <p class="card-text">#55 Carlos Sainz</p>
+                </div>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                </div>
+                  <div class="card-body py-0" >
+                  <img src="../assets/teams/fer_icon.png" height="70"/>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </a><a href="#" class="text-decoration-none">
+          <div class="col">
+            <div class="card shadow-sm" id="team-card">
+              <p class="card-text text-center pt-2 pb-2 fw-bold merc-card">Mercedes</p>
+              <img class="bd-placeholder-img card-img-top" src="../assets/teams/w14.png"/>
+              <div class="d-flex justify-content-around">
+                <img class="" src="../assets/teams/HAM_icon.png" width="85" />
+                <img class="" src="../assets/teams/RUS_icon.png" width="85"/>
+              </div>
+                <div class="card-body text-center">
+                <div class="d-flex justify-content-around fw-bold">
+                <p class="card-text">#44 Lewis Hamilton</p>
+                <p class="card-text">#63 George Russell</p>
+                </div>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                </div>
+                  <div class="card-body py-0" >
+                  <img src="../assets/teams/merc_icon.png" height="70"/>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </a><a href="#" class="text-decoration-none">
+          <div class="col">
+            <div class="card shadow-sm" id="team-card">
+              <p class="card-text text-center pt-2 pb-2 fw-bold alp-card">Alpine</p>
+              <img class="bd-placeholder-img card-img-top" src="../assets/teams/alpine_car.png"/>
+              <div class="d-flex justify-content-around">
+                <img class="" src="../assets/teams/GAS_icon.png" width="85" />
+                <img class="" src="../assets/teams/OCO_icon.png" width="85"/>
+              </div>
+                <div class="card-body text-center">
+                <div class="d-flex justify-content-around fw-bold">
+                <p class="card-text">#10 Pierre Gasly</p>
+                <p class="card-text">#31 Esteban Ocon</p>
+                </div>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                </div>
+                  <div class="card-body py-0" >
+                  <img src="../assets/teams/alp_icon.png" height="70"/>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </a><a href="#" class="text-decoration-none">
+          <div class="col">
+            <div class="card shadow-sm" id="team-card">
+              <p class="card-text text-center pt-2 pb-2 fw-bold mcl-card">McLaren</p>
+              <img class="bd-placeholder-img card-img-top" src="../assets/teams/MCL60.png"/>
+              <div class="d-flex justify-content-around">
+                <img class="" src="../assets/teams/NOR_icon.png" width="85" />
+                <img class="" src="../assets/teams/PIA_icon.png" width="85"/>
+              </div>
+                <div class="card-body text-center">
+                <div class="d-flex justify-content-around fw-bold">
+                <p class="card-text">#4 Lando Norris</p>
+                <p class="card-text">#81 Oscar Piastri</p>
+                </div>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                </div>
+                  <div class="card-body py-0" >
+                  <img src="../assets/teams/MCL_icon.png" height="70"/>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </a><a href="#" class="text-decoration-none">
+          <div class="col">
+            <div class="card shadow-sm" id="team-card">
+              <p class="card-text text-center pt-2 pb-2 fw-bold haas-card">Haas</p>
+              <img class="bd-placeholder-img card-img-top" src="../assets/teams/haas_car.png"/>
+              <div class="d-flex justify-content-around">
+                <img class="" src="../assets/teams/MAG_icon.png" width="85" />
+                <img class="" src="../assets/teams/HUL_icon.png" width="85"/>
+              </div>
+                <div class="card-body text-center">
+                <div class="d-flex justify-content-around fw-bold">
+                <p class="card-text">#20 Kevin Magnussen</p>
+                <p class="card-text">#27 Nico Hulkenberg</p>
+                </div>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                </div>
+                  <div class="card-body py-0" >
+                  <img src="../assets/teams/haas_icon.png" height="70"/>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </a><a href="#" class="text-decoration-none">
+          <div class="col">
+            <div class="card shadow-sm" id="team-card">
+              <p class="card-text text-center pt-2 pb-2 fw-bold alfa-card">Alfa Romeo</p>
+              <img class="bd-placeholder-img card-img-top" src="../assets/teams/romeo_car.png"/>
+              <div class="d-flex justify-content-around">
+                <img class="" src="../assets/teams/BOT_icon.png" width="85" />
+                <img class="" src="../assets/teams/ZHO_icon.png" width="85"/>
+              </div>
+                <div class="card-body text-center">
+                <div class="d-flex justify-content-around fw-bold">
+                <p class="card-text">#77 Valtteri Bottas</p>
+                <p class="card-text">#24 Zhou Guanyu</p>
+                </div>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                </div>
+                  <div class="card-body py-0" >
+                  <img src="../assets/teams/romeo_icon.png" height="70"/>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </a><a href="#" class="text-decoration-none">
+          <div class="col">
+            <div class="card shadow-sm" id="team-card">
+              <p class="card-text text-center pt-2 pb-2 fw-bold alpha-card">AlphaTauri</p>
+              <img class="bd-placeholder-img card-img-top" src="../assets/teams/tau_car.png"/>
+              <div class="d-flex justify-content-around">
+                <img class="" src="../assets/teams/TSU_icon.png" width="85" />
+                <img class="" src="../assets/teams/DEV_icon.png" width="85"/>
+              </div>
+                <div class="card-body text-center">
+                <div class="d-flex justify-content-around fw-bold">
+                <p class="card-text">#22 Yuki Tsunoda</p>
+                <p class="card-text">#21 Nyck De Vries</p>
+                </div>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                </div>
+                  <div class="card-body py-0" >
+                  <img src="../assets/teams/tau_icon.png" height="70"/>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </a><a href="#" class="text-decoration-none">
+          <div class="col">
+            <div class="card shadow-sm" id="team-card">
+              <p class="card-text text-center pt-2 pb-2 fw-bold wil-card">Williams</p>
+              <img class="bd-placeholder-img card-img-top" src="../assets/teams/wil_car.png"/>
+              <div class="d-flex justify-content-around">
+                <img class="" src="../assets/teams/ALB_icon.png" width="85" />
+                <img class="" src="../assets/teams/SAR_icon.png" width="85"/>
+              </div>
+                <div class="card-body text-center">
+                <div class="d-flex justify-content-around fw-bold">
+                <p class="card-text">#23 Alexander Albon</p>
+                <p class="card-text">#2 Logan Sargeant</p>
+                </div>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                </div>
+                  <div class="card-body py-0" >
+                  <img src="../assets/teams/wil_icon.png" height="70"/>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </a>
+        </div>
+      </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="paint-it-black">
+      <div class="container">
+        <footer class="d-flex flex-wrap justify-content-center align-items-center py-4 mb-0">
+          <div class="col-md-6 d-flex align-items-center justify-content-center">
+            <a href="https://github.com/mitkogeorgiev17" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-github" viewBox="0 0 16 16">
+                <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+              </svg>
+            </a>
+            <a class="text-white text-decoration-none" href="https://github.com/mitkogeorgiev17">github.com/mitkogeorgiev17<svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a>
+          </div>
+        </footer>
+      </div>
+    </section>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
