--- a/public/about.html
+++ b/public/about.html
@@ -36,27 +36,27 @@
     </section>
 
     <section class="container">
-      <div class="px-0 pt-1 my-5 mt-0 text-center">
+      <div class="px-0 pt-1 my-3 mt-0 text-center">
         <div class="overflow-hidden" style="max-height: 45vh;">
           <h1 class="display-4 fw-bold text-body-emphasis">All about Formula 1</h1>
-          <div class="container-lg-6">
-            <img src="../assets/pit.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="F1 car" width="700" height="500" loading="lazy">
+          <div class="container-xl-8">
+            <img src="../assets/pit.png" class="img-fluid border rounded-2 mb-4" alt="F1 car" width="866" loading="lazy">
           </div>
         </div>
-        <div class="col-lg-6 mx-auto border rounded my-3">
-          <p class="lead mb-4 pt-4">Formula 1, often referred to as F1, is the pinnacle of motorsport. It is a global racing series that features the most skilled drivers, cutting-edge technology, and a relentless pursuit of speed and precision. With a history spanning over seven decades, Formula 1 has become an iconic and revered sport, captivating millions of fans worldwide. It represents the ultimate fusion of engineering brilliance, strategic prowess, and high-stakes competition.</p>
+        <div class="col-xl-8 mx-auto border rounded my-2 px-2">
+          <p class="lead mb-4 pt-4 px-2">F1 is the pinnacle of motorsport. It is a global racing series that features the most skilled drivers, cutting-edge technology, and a relentless pursuit of speed and precision. With a history spanning over seven decades, Formula 1 has become an iconic and revered sport, captivating millions of fans worldwide. It represents the ultimate fusion of engineering brilliance, strategic prowess, and high-stakes competition.</p>
         </div>
-        <div class="col-lg-6 mx-auto border rounded my-3">
-          <p class="lead mb-4 pt-4">At its core, Formula 1 is about pushing the limits of what is possible in motorsport. The sport showcases the finest automotive engineering advancements, with teams constantly innovating and refining their cars to achieve optimal performance. From aerodynamics to hybrid power units, Formula 1 serves as a hotbed for technological progress, often leading to breakthroughs that impact the automotive industry as a whole.</p>
+        <div class="col-xl-8 mx-auto border rounded my-3 px-2">
+          <p class="lead mb-4 pt-4 px-2">At its core, F1 is about pushing the limits of what is possible in motorsport. The sport showcases the finest automotive engineering advancements, with teams constantly innovating and refining their cars to achieve optimal performance. From aerodynamics to hybrid power units, F1 serves as a hotbed for technological progress, often leading to breakthroughs that impact the automotive industry as a whole.</p>
         </div>
-        <div class="col-lg-6 mx-auto border rounded my-3">
-          <p class="lead mb-4 pt-4">A Formula 1 season is a thrilling journey that spans multiple races held across different countries and continents. Typically, a season consists of around 20 races, taking place on a variety of circuits, including street circuits, purpose-built tracks, and historic venues. Each race is a battle between drivers, teams, and their finely-tuned machines, as they vie for victory, points, and the ultimate goal of winning the Drivers' and Constructors' Championships.</p>
+        <div class="col-xl-8 mx-auto border rounded my-3 px-2">
+          <p class="lead mb-4 pt-4 px-2">A Formula 1 season is a thrilling journey that spans multiple races held across different countries. A season consists of around 20 races, taking place on a variety of circuits, including street circuits and historic venues. Each race is a battle between drivers, teams, and their finely-tuned machines, as they vie for victory, points, and the ultimate goal of winning the Drivers' and Constructors' Championships.</p>
         </div>
       </div>
-      <div class="container col-xxl-8 px-4 mt-0">
+      <div class="container col-xl-8 px-4 mt-0">
         <div class="row flex-lg-row-reverse align-items-center g-5 py-0">
           <div class="col-10 col-sm-8 col-lg-6">
-            <img src="../assets/pit2.jpg" class="d-block mx-lg-auto img-fluid mb-5" alt="f1 car" loading="lazy">
+            <img src="../assets/pit2.jpg" width="405px" height="710px" class="d-block mx-lg-auto mb-5" alt="f1 car" loading="lazy">
           </div>
           <div class="col-lg-6 border rounded my-3">
             <p class="lead mt-3">Strategy plays a crucial role in Formula 1. From tire management and pit stop decisions to race tactics and fuel consumption, teams must make calculated choices to maximize their chances of success. Races are not only about raw speed but also about astute decision-making and adaptability, making Formula 1 a chess match on wheels where split-second choices can make or break a race.</p>
