--- a/index.html
+++ b/index.html
@@ -72,6 +72,50 @@
       </div>
     </section>
 
+    <section>
+      <div class="container">
+        <p class="f1p">The ability to react quickly and accurately is crucial for success in Formula 1 racing. F1 drivers possess super-fast reaction times, honed through hand-eye coordination and peripheral awareness. They can react nearly three times faster than the average person, responding to external stimuli in as little as 0.2 seconds.<br/><br/>
+          Test your reflexes and see how quickly you can respond to changing lights. In this game, a series of light sectors will light up, one by one, at a 1-second interval. Your challenge is to stay focused and wait for all the lights to turn red. But be ready, because at any moment, the lights will go out, and it's up to you to click as fast as you can! Your reaction time, measured in seconds, will be displayed on the screen. </p>
+        <div class="f1-lights">
+            <div class="backstrip"></div>
+            <div class="lightstrip one">
+                <div class="f1light"></div>
+                <div class="f1light"></div>
+                <div id="lightable" class="f1light"></div>
+                <div id="lightable" class="f1light"></div>
+            </div>
+            <div class="lightstrip two">
+                <div class="f1light"></div>
+                <div class="f1light"></div>
+                <div id="lightable" class="f1light"></div>
+                <div id="lightable" class="f1light"></div>
+            </div>
+            <div class="lightstrip three">
+                <div class="f1light"></div>
+                <div class="f1light"></div>
+                <div id="lightable" class="f1light"></div>
+                <div id="lightable" class="f1light"></div>
+            </div>
+            <div class="lightstrip four">
+                <div class="f1light"></div>
+                <div class="f1light"></div>
+                <div id="lightable" class="f1light"></div>
+                <div id="lightable" class="f1light"></div>
+            </div>
+            <div class="lightstrip five">
+                <div class="f1light"></div>
+                <div class="f1light"></div>
+                <div id="lightable" class="f1light"></div>
+                <div id="lightable" class="f1light"></div>
+            </div>
+        </div>
+        <h2 class="pb-5 mb-5" id="reaction">Your reaction time: </h2>
+        </div>
+    
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+        <script src="index.js"></script>
+    </section>
+
     <section class="paint-it-black">
       <div class="container">
         <footer class="d-flex flex-wrap justify-content-center align-items-center py-4 mb-0">
@@ -87,6 +131,9 @@
       </div>
     </section>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
